# fast_downloader

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  queue.rs
src/: checksum.rs  downloader.rs  error.rs  filename.rs  http.rs  lib.rs  progress.rs  queue.rs  state.rs
tests/: integration.rs
tests/common/: mod.rs
