[package]
name = "fast_downloader"
version = "0.1.0"
edition = "2021"
description = "Multi-threaded HTTP downloader with resume support and task queue"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "deflate"] }
futures-util = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
percent-encoding = "2"
thiserror = "1"
tracing = "0.1"
tokio-util = "0.7"

[dev-dependencies]
axum = { version = "0.7", features = ["http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
hyper = { version = "1", features = ["server", "http1"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
rand = "0.8"
sha2 = "0.10"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "queue"
path = "examples/queue.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
